<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/picture_container"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="5dp"
                android:contentDescription="@string/avatar"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/picture_container"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/comment_username"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/commenter_username"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/picture_container"
                    tools:ignore="MissingConstraints"
                    android:textColor="@color/text_color"/>

                <TextView
                    android:id="@+id/comment_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/body_of_comment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/picture_container"
                    app:layout_constraintTop_toBottomOf="@+id/comment_username" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/editComment"
                        android:layout_width="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/editButton">
                    </TextView>

                    <TextView
                        android:id="@+id/deleteComment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/deleteButton">
                    </TextView>

                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>