<!-- res/layout/bottom_nav_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_nav_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/navigation_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/home_menu_btn"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:background="@null"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/home_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/sub_menu_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@null"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sub_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_sub"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/user_menu_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@null"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/user_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_user"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>